Code cleanup with IDE tips
Former-commit-id: 6dda4273e5e19da62a37d62b75f8a991c3f0b428
Former-commit-id: 5ac3c064071cce19c3158e43ba96bf6e8ec436a4